--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <li>JavaScript je programovací jazyk využíván pro tvorbu webových stránek a webových aplikací</li>
               <li> <a href="https://usecubes.com">Usecubes</a> </li>
               <li><a href="https://playcanvas.com/">Playcanvas</a></li>
-              <li><a href="http://polycraftgame.com/"></a>Polycraft</li>
+              <li><a href="http://polycraftgame.com/">Polycraft</a></li>
             </ul>
           </div>
         </div>
